--- a/conf.d/nginx.conf
+++ b/conf.d/nginx.conf
@@ -14,5 +14,14 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
+
+        location /connection {
+            proxy_pass http://api:3010/connection;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
     }
 }
