--- a/conf.d/nginx.conf
+++ b/conf.d/nginx.conf
@@ -15,8 +15,8 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        location /connection {
-            proxy_pass http://api:3010/connection;
+        location /api/ {
+            proxy_pass http://api:3010/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
